partially fix all word usages

--- a/docs/lessons/greetings-salutations.mdx
+++ b/docs/lessons/greetings-salutations.mdx
@@ -88,8 +88,8 @@ to the action inside of the subjective subordinate clause.
 <HisyeoTabs>
     <p>nü küu monodo pı dizel zelen ci.&emsp;<em>Let's meet again soon, ok?</em></p>
     <p>hoi woküt zık ü noyo köi dëko nimü pı dizel.&emsp;<em>When can I see you again?</em></p>
-    <p>nü köi döstoc iskö hoi pıtün yë lono unpol ci.&emsp;<em>We could get a drink on Saturday night, sound good?</em></p>
-    <p>nimü lı völni hoi suhot tukwos yë pıtün övo ko.&emsp;<em>Are you free at 8pm tonight?</em></p>
+    <p>nü köi döstoc iskö hoi pıtün yë lono unbol ci.&emsp;<em>We could get a drink on Saturday night, sound good?</em></p>
+    <p>nimü lı völni hoi suhot tukwos yë pıtün öfo ko.&emsp;<em>Are you free at 8pm tonight?</em></p>
     <p>noyo xiwon xe dëko nimü pı zelen ëto löicök.&emsp;<em>I so hope to see you very soon!</em></p>
 </HisyeoTabs>
 
