--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -79,10 +79,10 @@ that you'll need to count all the way up to a trillion.
         <tr><td>100</td><td><HisyeoText kind='latin'>viyën</HisyeoText></td></tr>
         <tr><td>101</td><td><HisyeoText kind='latin'>viyën kut</HisyeoText></td></tr>
         <tr><td>234</td><td><HisyeoText kind='latin'>düi viyën son dus nonkü</HisyeoText></td></tr>
-        <tr><td>1000</td><td><HisyeoText kind='latin'>elvü kut</HisyeoText></td></tr>
-        <tr><td>1,000,000</td><td><HisyeoText kind='latin'>elvü düi</HisyeoText></td></tr>
-        <tr><td>1,999</td><td><HisyeoText kind='latin'>elvü kut,eson viyën eson dus eson</HisyeoText></td></tr>
-        <tr><td>1,234,567</td><td><HisyeoText kind='latin'>elvü düi, düi viyën son dus nonkü elvü kut, tiü viyën toü dus xëti</HisyeoText></td></tr>
+        <tr><td>1000</td><td><HisyeoText kind='latin'>elfü kut</HisyeoText></td></tr>
+        <tr><td>1,000,000</td><td><HisyeoText kind='latin'>elfü düi</HisyeoText></td></tr>
+        <tr><td>1,999</td><td><HisyeoText kind='latin'>elfü kut,eson viyën eson dus eson</HisyeoText></td></tr>
+        <tr><td>1,234,567</td><td><HisyeoText kind='latin'>elfü düi, düi viyën son dus nonkü elfü kut, tiü viyën toü dus xëti</HisyeoText></td></tr>
       </tbody>
     </table>
   </TabItem>
@@ -144,10 +144,10 @@ that you'll need to count all the way up to a trillion.
         <tr><td>100</td><td><HisyeoText kind='abugida'>viyën</HisyeoText></td></tr>
         <tr><td>101</td><td><HisyeoText kind='abugida'>viyën kut</HisyeoText></td></tr>
         <tr><td>234</td><td><HisyeoText kind='abugida'>düi viyën son dus nonkü</HisyeoText></td></tr>
-        <tr><td>1000</td><td><HisyeoText kind='abugida'>elvü kut</HisyeoText></td></tr>
-        <tr><td>1,000,000</td><td><HisyeoText kind='abugida'>elvü düi</HisyeoText></td></tr>
-        <tr><td>1,999</td><td><HisyeoText kind='abugida'>elvü kut,eson viyën eson dus eson</HisyeoText></td></tr>
-        <tr><td>1,234,567</td><td><HisyeoText kind='abugida'>elvü düi, düi viyën son dus nonkü elvü kut, tiü viyën toü dus xëti</HisyeoText></td></tr>
+        <tr><td>1000</td><td><HisyeoText kind='abugida'>elfü kut</HisyeoText></td></tr>
+        <tr><td>1,000,000</td><td><HisyeoText kind='abugida'>elfü düi</HisyeoText></td></tr>
+        <tr><td>1,999</td><td><HisyeoText kind='abugida'>elfü kut,eson viyën eson dus eson</HisyeoText></td></tr>
+        <tr><td>1,234,567</td><td><HisyeoText kind='abugida'>elfü düi, düi viyën son dus nonkü elfü kut, tiü viyën toü dus xëti</HisyeoText></td></tr>
       </tbody>
     </table>
   </TabItem>
@@ -155,7 +155,7 @@ that you'll need to count all the way up to a trillion.
 
 ## Tens, Thousands, Millions
 
-As you can see above, you use <HisyeoWord is='elvü'/> with the number directly following
+As you can see above, you use <HisyeoWord is='elfü'/> with the number directly following
 it representing how many groups of 3 places. This is the same amount as we put
 commas or periods in our number representations.
 
@@ -167,7 +167,7 @@ These are called **Cardinal Numbers**. You can supply any amount of number words
 here and they follow the rules shown above to generate their value or amount.
 
 <HisyeoTabs>
-  <p>düi viyën son hövezi "two hundred and three cows"</p>
+  <p>düi viyën son höfezi "two hundred and three cows"</p>
 </HisyeoTabs>
 
 If you specify only the number 1 (kut), it acts like the indefinite article
@@ -175,7 +175,7 @@ If you specify only the number 1 (kut), it acts like the indefinite article
 sufficient.
 
 <HisyeoTabs>
-  <p>kut ënpukun "one burp" or "a burp"</p>
+  <p>kut ënbukun "one burp" or "a burp"</p>
 </HisyeoTabs>
 
 :::tip Plurality Optional But Possible
@@ -248,13 +248,13 @@ wëxön/ʒʇɋ̃ı).
 | Mercury | ![Mercury in true color (by MESSENGER in 2008) - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Mercury_in_true_color.jpg/240px-Mercury_in_true_color.jpg)                                                                                                                                                                                                         | Monday    | <HisyeoText kind='latin'>lono düsul</HisyeoText>   | <HisyeoText kind='abugida'>lono düsul</HisyeoText>   |
 | Venus   | ![True colour image of Venus, as captured by MESSENGER - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Venus_2_Approach_Image.jpg/234px-Venus_2_Approach_Image.jpg)                                                                                                                                                                                               | Tuesday   | <HisyeoText kind='latin'>lono mihüon</HisyeoText>  | <HisyeoText kind='abugida'>lono mihüon</HisyeoText>  |
 | Earth   | ![The Blue Marble, Apollo 17, December 1972](https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/The_Blue_Marble_%28remastered%29.jpg/240px-The_Blue_Marble_%28remastered%29.jpg)                                                                                                                                                                                                  | Wednesday | <HisyeoText kind='latin'>lono zöi</HisyeoText>     | <HisyeoText kind='abugida'>lono zöi</HisyeoText>     |
-| Mars    | ![Mars, as captured by the Hope orbiter](https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Mars_-_August_30_2021_-_Flickr_-_Kevin_M._Gill.png/240px-Mars_-_August_30_2021_-_Flickr_-_Kevin_M._Gill.png)                                                                                                                                                                          | Thursday  | <HisyeoText kind='latin'>lono cınöpu</HisyeoText>  | <HisyeoText kind='abugida'>lono cınöpu</HisyeoText>  |
+| Mars    | ![Mars, as captured by the Hope orbiter](https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Mars_-_August_30_2021_-_Flickr_-_Kevin_M._Gill.png/240px-Mars_-_August_30_2021_-_Flickr_-_Kevin_M._Gill.png)                                                                                                                                                                          | Thursday  | <HisyeoText kind='latin'>lono cınöbu</HisyeoText>  | <HisyeoText kind='abugida'>lono cınöbu</HisyeoText>  |
 | Jupiter | ![This true-color simulated view of Jupiter is composed of 4 images taken by NASA's Cassini spacecraft on December 7, 2000 - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/Jupiter_in_true_color.jpg/248px-Jupiter_in_true_color.jpg)                                                                                                                             | Friday    | <HisyeoText kind='latin'>lono zingu</HisyeoText>   | <HisyeoText kind='abugida'>lono zingu</HisyeoText>   |
-| Saturn  | ![Original Caption Released with Image: NASA's Voyager 2 took this 'true color' photograph of Saturn on July 21, 1981, when the spacecraft was 33.9 million kilometers (21 million miles) from the planet. - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Saturn_With_Rhea_and_Dione_%28true_color%29.jpg/179px-Saturn_With_Rhea_and_Dione_%28true_color%29.jpg) | Saturday  | <HisyeoText kind='latin'>lono unpol</HisyeoText>  | <HisyeoText kind='abugida'>lono unpol</HisyeoText>  |
+| Saturn  | ![Original Caption Released with Image: NASA's Voyager 2 took this 'true color' photograph of Saturn on July 21, 1981, when the spacecraft was 33.9 million kilometers (21 million miles) from the planet. - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Saturn_With_Rhea_and_Dione_%28true_color%29.jpg/179px-Saturn_With_Rhea_and_Dione_%28true_color%29.jpg) | Saturday  | <HisyeoText kind='latin'>lono unbol</HisyeoText>  | <HisyeoText kind='abugida'>lono unbol</HisyeoText>  |
 | Uranus  | ![This picture of Uranus in true color was compiled from images returned Jan. 17, 1986, by the narrow-angle camera of Voyager 2. - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Uranus_true_colour.jpg/240px-Uranus_true_colour.jpg)                                                                                                                             | Sunday    | <HisyeoText kind='latin'>lono xolxili</HisyeoText> | <HisyeoText kind='abugida'>lono xolxili</HisyeoText> |
 
 In order to indicate a specific day use one of the demonstrative pronouns
-(<HisyeoWord is='övo'/>, <HisyeoWord is='ulyö'/>, <HisyeoWord is='onö'/>). Otherwise, a weekday
+(<HisyeoWord is='öfo'/>, <HisyeoWord is='ulyö'/>, <HisyeoWord is='onö'/>). Otherwise, a weekday
 (or really any use of lono) is either one or many unspecified days. You
 can use a day as a condition in a hön prepositional phrase:
 
@@ -266,7 +266,7 @@ can use a day as a condition in a hön prepositional phrase:
 Asking what day of the week it is can be done by asking what color of day:
 
 <HisyeoTabs>
-  <p>lono övo lı longı zık.&emsp;<em>"What day is today?"</em></p>
+  <p>lono öfo lı longı zık.&emsp;<em>"What day is today?"</em></p>
 </HisyeoTabs>
 
 ### Months of the Year
@@ -334,7 +334,7 @@ relative clause is used to treat the following phrase as an
 [appositive](https://en.wikipedia.org/wiki/Apposition).
 
 <HisyeoTabs>
-  <p>lono övo lı lono kut yë wuto son.
+  <p>lono öfo lı lono kut yë wuto son.
      <em>"Today is the March 1st"</em></p>
   <p>lono kon lözic niün lı lono mihüon xe lı lono zıyön yë wuto tiü. 
      <em>"His birthday is Tuesday, May 14th"</em></p>
@@ -512,7 +512,7 @@ If you need to talk about specific times within an hour, there is a base
 modifier content word that does double duty as a time unit for minutes.
 
 <HisyeoTabs>
-  <p>ke lı gö pı tölki lon tiü ëvun&emsp;<em>"It will only be 5 minutes"</em></p>
+  <p>ke lı gö pı tölki lon tiü ëfun&emsp;<em>"It will only be 5 minutes"</em></p>
 </HisyeoTabs>
 
 ## Measurements
@@ -580,7 +580,7 @@ millimeters.
 > —Will Sullivan, Smithsonian Magazine, 2 Aug. 2024
 
 <HisyeoTabs>
-  <p>hön tüek yë wëilun ü cıngi mëtliös yünyoü zötëstö len oxon xe ëo lö pı mulö ölë viyën volo zënsi inpoli lon toü öni kut cüti yë kildo hoi mënüs en kut sünkon.</p>
+  <p>hön tüek yë wëilun ü cıngi mëtliös yünyoü zötëstö len oxon xe ëo lö pı mulö ölë viyën volo zënsi inboli lon toü öni kut cüti yë kildo hoi mënüs en kut sünkon.</p>
 </HisyeoTabs>
 
 <HisyeoTooltip />
