--- a/docs/reference/word_types/determiners.mdx
+++ b/docs/reference/word_types/determiners.mdx
@@ -58,9 +58,9 @@ by using the below method of assembling parts of a number:
         <tr><td><p>100</p></td><td><HisyeoText kind='latin'>viyën</HisyeoText></td></tr>
         <tr><td><p>101</p></td><td><HisyeoText kind='latin'>viyën kut</HisyeoText></td></tr>
         <tr><td><p>234</p></td><td><HisyeoText kind='latin'>düi viyën son dus nonkü</HisyeoText></td></tr>
-        <tr><td><p>1000</p></td><td><HisyeoText kind='latin'>elvü kut</HisyeoText></td></tr>
-        <tr><td><p>1,000,000</p></td><td><HisyeoText kind='latin'>elvü düi</HisyeoText></td></tr>
-        <tr><td><p>1,999</p></td><td><HisyeoText kind='latin'>elvü kut, eson viyën eson dus eson</HisyeoText></td></tr>
+        <tr><td><p>1000</p></td><td><HisyeoText kind='latin'>elfü kut</HisyeoText></td></tr>
+        <tr><td><p>1,000,000</p></td><td><HisyeoText kind='latin'>elfü düi</HisyeoText></td></tr>
+        <tr><td><p>1,999</p></td><td><HisyeoText kind='latin'>elfü kut, eson viyën eson dus eson</HisyeoText></td></tr>
     </table>
   </TabItem>
   <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
@@ -93,9 +93,9 @@ by using the below method of assembling parts of a number:
         <tr><td><p>100</p></td><td><HisyeoText kind='abugida'>viyën</HisyeoText></td></tr>
         <tr><td><p>101</p></td><td><HisyeoText kind='abugida'>viyën kut</HisyeoText></td></tr>
         <tr><td><p>234</p></td><td><HisyeoText kind='abugida'>düi viyën son dus nonkü</HisyeoText></td></tr>
-        <tr><td><p>1000</p></td><td><HisyeoText kind='abugida'>elvü kut</HisyeoText></td></tr>
-        <tr><td><p>1,000,000</p></td><td><HisyeoText kind='abugida'>elvü düi</HisyeoText></td></tr>
-        <tr><td><p>1,999</p></td><td><HisyeoText kind='abugida'>elvü kut, eson viyën eson dus eson</HisyeoText></td></tr>
+        <tr><td><p>1000</p></td><td><HisyeoText kind='abugida'>elfü kut</HisyeoText></td></tr>
+        <tr><td><p>1,000,000</p></td><td><HisyeoText kind='abugida'>elfü düi</HisyeoText></td></tr>
+        <tr><td><p>1,999</p></td><td><HisyeoText kind='abugida'>elfü kut, eson viyën eson dus eson</HisyeoText></td></tr>
     </table>
   </TabItem>
 </Tabs>
@@ -105,7 +105,7 @@ cardinal number).
 
 <HisyeoTabs>
   <p>son sütüö lı cok sün zomo.&emsp;<em>"Three friends are leaving the group."</em></p>
-  <p>nü puswen son dus tiü ëvun oxon xe piek nı süwit övo.&emsp;<em>"We need 35 minutes to bake this cake."</em></p>
+  <p>nü puswen son dus tiü ëfun oxon xe piek nı süwit öfo.&emsp;<em>"We need 35 minutes to bake this cake."</em></p>
 </HisyeoTabs>
 
 Providing a quantity determiner of "one" (<HisyeoWord is='kut'/>) can be used as a kind of
@@ -128,7 +128,7 @@ represent the number of times something is to be multiplied.
 
 <HisyeoTabs>
   <p>poholon yünyoü zınkon öni düi.&emsp;<em>"The closet has double doors."</em></p>
-  <p>niün lı kiösö ëto köi tüu zoston öni nonkü pı opunyun.&emsp;<em>"He's quite athletic and can do quadruple jumps with ease."</em></p>
+  <p>niün lı kiösö ëto köi tüu zoston öni nonkü pı obunyun.&emsp;<em>"He's quite athletic and can do quadruple jumps with ease."</em></p>
 </HisyeoTabs>
 
 ### Adverbial
@@ -156,7 +156,7 @@ In order to specify that something is double the degree of the associated
 noun-phrase. You prefix a quantity phrase with <HisyeoWord is='xokön'/>.
 
 <HisyeoTabs>
-    <p>motüo wohi noyo pı xokön düi diyondë hön xe pı elentët lı ëo ınvultin öni düstu woküt.&emsp;<em>My mother was always doubly careful when winding the clock.</em></p>
+    <p>motüo wohi noyo pı xokön düi diyondë hön xe pı elentët lı ëo ınfultin öni düstu woküt.&emsp;<em>My mother was always doubly careful when winding the clock.</em></p>
     <p>lı sonkon ü xe pesol zınkon, ün pı xokön son hön pıtün.&emsp;<em>It is important to lock the door, and triply so at night.</em></p>
     <p>lolü nimü oncëmon ëo xokön düi tönkö hön doho noyo.&emsp;<em>Your words feel doubly hurtful given my sacrifices.</em></p>
 </HisyeoTabs>
@@ -173,10 +173,10 @@ exact numerical quantity the noun actually is.
 
 <HisyeoTabs>
   <p><strong>total/all:</strong>&emsp;möi sütüö noyo süko kontol doi osyen.&emsp;<em>All my friends like classical music</em></p>
-  <p><strong>highest/most:</strong>&emsp;övo lı numüno yë eswen sonkon en möi.&emsp;<em>This is the most important example.</em></p>
+  <p><strong>highest/most:</strong>&emsp;öfo lı numüno yë eswen sonkon en möi.&emsp;<em>This is the most important example.</em></p>
   <p><strong>high/many:</strong>&emsp;lı ëto toliko pësu yë xe cöüvon.&emsp;<em>"There are many different ways to cook a meal."</em></p>
-  <p><strong>higher/more:</strong>&emsp;lı eswen toliko yë xe tüu övo, en vos noyo köi tüek vio kut.&emsp;<em>"There are more ways to xe this than I can count."</em></p>
-  <p><strong>lower/fewer:</strong>&emsp;lı mënüs umo hoi övo pı ipüdü.&emsp;<em>"There are less people here now."</em></p>
+  <p><strong>higher/more:</strong>&emsp;lı eswen toliko yë xe tüu öfo, en vos noyo köi tüek vio kut.&emsp;<em>"There are more ways to xe this than I can count."</em></p>
+  <p><strong>lower/fewer:</strong>&emsp;lı mënüs umo hoi öfo pı ibüdü.&emsp;<em>"There are less people here now."</em></p>
   <p><strong>low/some:</strong>&emsp;yoüti umo süko kon mühoyon.&emsp;<em>"Some people like camping."</em></p>
   <p><strong>lowest/least:</strong>&emsp;noyo pı tölki yünyoü zötëstö oxon xe cıvü mënüs cıno yë nıwos en möi.&emsp;<em>I can only afford to pay the least of the bills.</em></p>
   <p><strong>zero/none:</strong>&emsp;xünyu yë düi umo lı sumon.&emsp;<em>No two people are the same.</em></p>
