--- a/docs/reference/word_types/modifiers.mdx
+++ b/docs/reference/word_types/modifiers.mdx
@@ -75,7 +75,7 @@ When you use the second form (<HisyeoWord is="vos"/>), you must provide at least
 one constituent that refers to the verb or noun phrase, this is called the
 **resumptive phrase**. Hisyëö uses the demonstratives as resumptive pronouns
 within resumptive phrases. Use the proximal demonstrative
-(<HisyeoWord is="övo"/>) when referring to the speaker or objects that the
+(<HisyeoWord is="öfo"/>) when referring to the speaker or objects that the
 speaker possesses, use the medial demonstrative (<HisyeoWord is="ulyö"/>)
 when referring to the person being addressed or objects possesed by that person,
 use the distal demonstrative (<HisyeoWord is="onö"/>) when referring to someone
@@ -84,7 +84,7 @@ party.
 
 <HisyeoTabs>
     <p>umo wohi xe nıwos hoi zınkon uklo, wëloi hoi sëdu muni.&emsp;<em>"The woman who lives next door works in a bank."</em></p>
-    <p>övo lı non vos noyo völun xe möniso övo müt nimü.&emsp;<em>"This is the video that I wanted to show you."</em></p>
+    <p>öfo lı non vos noyo völun xe möniso öfo müt nimü.&emsp;<em>"This is the video that I wanted to show you."</em></p>
     <p>lı yöüli ëto ü umo vos niün pı ılık köto onö.&emsp;<em>"The person they spoke to was really helpful."</em></p>
 </HisyeoTabs>
 
