--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -161,9 +161,9 @@ English, this represents nearly all of the senses of the word "from" (except for
 differentiation and causation).
 
 <HisyeoTabs>
-  <p>noyo döstoc lipü in luvono sün sıskın moskül noyo.&emsp;<em>I got a letter from my brother.</em></p>
+  <p>noyo döstoc lipü in lufono sün sıskın moskül noyo.&emsp;<em>I got a letter from my brother.</em></p>
   <p>nimü köi döstoc yök vısun nëös sün nec öni tüek nucoto.&emsp;<em>You can't get all your news from the Internet.</em></p>
-  <p>tömös övo sün dus eson tukwos dus.&emsp;<em>This manuscript is from the 1980s.</em></p>
+  <p>tömös öfo sün dus eson tukwos dus.&emsp;<em>This manuscript is from the 1980s.</em></p>
   <p>niün yünyoü si tömös xe hoı zomo mulö sün sokovü müt deku.&emsp;<em>He had books piled from floor to ceiling.</em></p>
   <p>niün lı si cok hoi lono xopëk sün sınsi Xıkogö.&emsp;<em>He departed yesterday from Chicago.</em></p>
   <p>küu pono pı elentët sün pëlëtë.&emsp;<em>Face away from the wall!</em></p>
@@ -217,13 +217,13 @@ entry](https://en.wiktionary.org/wiki/for).
 </HisyeoTabs>
 4. ✅ Befitting of someone’s beliefs, needs, wants, skills, or tastes; best suited to.
 <HisyeoTabs>
-  <p>hön vos xe wëko mokon hoi zuko pı dündon, lı eswen en vos nimü köi tüu, pinë wëloı övo oxon yök nimü.&emsp;<em>If having to bag the groceries correctly is more than you can handle, then this isn't the job for you.</em></p>
+  <p>hön vos xe wëko mokon hoi zuko pı dündon, lı eswen en vos nimü köi tüu, pinë wëloı öfo oxon yök nimü.&emsp;<em>If having to bag the groceries correctly is more than you can handle, then this isn't the job for you.</em></p>
 </HisyeoTabs>
 5. ✅ To be used or treated in a stated way, or with a stated purpose.
 <HisyeoTabs>
-  <p>övo lı gongoxi ülögun nëös oxon oütö gisgül noyo.&emsp;<em>This is a new bell for my bicycle.</em></p>
+  <p>öfo lı gongoxi ülögun nëös oxon oütö gisgül noyo.&emsp;<em>This is a new bell for my bicycle.</em></p>
   <p>piek süwit onö oxon köndodü yë üsën dizël yë umo Tomu ün Helen.&emsp;<em>The cake is for Tom and Helen's anniversary.</em></p>
-  <p>küöxı övo hoi övo oxon xe mokon. dizel oxon xe lı ëo vonmot.&emsp;<em>These apples here are for eating. The rest are for throwing away.</em></p>
+  <p>küöxı öfo hoi öfo oxon xe mokon. dizel oxon xe lı ëo vonmot.&emsp;<em>These apples here are for eating. The rest are for throwing away.</em></p>
 </HisyeoTabs>
 6. ✅ Supporting, in favour of. (Antonym: against)
 <HisyeoTabs>
@@ -241,11 +241,11 @@ entry](https://en.wiktionary.org/wiki/for).
 8. ✅ Intended to cure, remove or counteract; in order to cure, remove or counteract.
 <HisyeoTabs>
   <p>cigilsu in mokon oxon hüstun nimü.&emsp;<em>This medicine is for your cough.</em></p>
-  <p>noyo puswen xe ıspulyol nozi hoi nıwos oxon müxi mitmo nomü.&emsp;<em>I need to spray my house for termites.</em></p>
+  <p>noyo puswen xe ısbulyol nozi hoi nıwos oxon müxi mitmo nomü.&emsp;<em>I need to spray my house for termites.</em></p>
 </HisyeoTabs>
 9. ⛔ Over (a period of time). 
 <HisyeoTabs>
-  <p>noyo nıwos hoi övo lon son üsën.&emsp;<em>I've lived here for three years.</em></p>
+  <p>noyo nıwos hoi öfo lon son üsën.&emsp;<em>I've lived here for three years.</em></p>
   <p>niün köntësto lon yoüti lono hön nüyo kon cukto mitetën.&emsp;<em>They fought for days over a silly pencil.</em></p>
 </HisyeoTabs>
 10. ⛔ Throughout or across (a distance in space). 
@@ -265,7 +265,7 @@ entry](https://en.wiktionary.org/wiki/for).
 13. ⛔ In the role or capacity of; instead of; in place of.
 <HisyeoTabs>
   <p>noyo yön dinci yë kudüdo hülü mıslı miëpıl kon conzodo.&emsp;<em>I used a hay bale for a bed.</em></p>
-  <p>niün yünyoü ünvünö ziziyo mıslı vos wedo düuncit niün oxon nı.&emsp;<em>He's got a turnip for a brain.</em></p>
+  <p>niün yünyoü ünfünö ziziyo mıslı vos wedo düuncit niün oxon nı.&emsp;<em>He's got a turnip for a brain.</em></p>
 </HisyeoTabs>
 14. ⛔ In exchange for; in correspondence or equivalence with. 
 <HisyeoTabs>
@@ -273,20 +273,20 @@ entry](https://en.wiktionary.org/wiki/for).
 </HisyeoTabs>
 15. ✅ In order to obtain or acquire.
 <HisyeoTabs>
-  <p>noyo pelëxu oxon mülü xe hoi könyëc küngiyo yë lono cınöpu.&emsp;<em>I am aiming for completion by the end of business Thursday.</em></p>
+  <p>noyo pelëxu oxon mülü xe hoi könyëc küngiyo yë lono cınöbu.&emsp;<em>I am aiming for completion by the end of business Thursday.</em></p>
   <p>niün pëüdo oxon cëo yë mulö ëto.&emsp;<em>He's going for his doctorate.</em></p>
   <p>nimü völun xe lı lö oxon iskö ülzo ko.&emsp;<em>xe you want to go for coffee?</em></p>
-  <p>umo xe nıwos hoi möi poxö yë küöcyo Elovo, diyondë si umo Delvi oxon zuwopü.&emsp;<em>People all over Greece looked to Delphi for answers.</em></p>
-  <p>nimü köi lı lö müt guvuyo oxon yoüti hüwu ko.&emsp;<em>Can you go to the store for some eggs?</em></p>
+  <p>umo xe nıwos hoi möi poxö yë küöcyo Elovo, diyondë si umo Delvi oxon zuwobü.&emsp;<em>People all over Greece looked to Delphi for answers.</em></p>
+  <p>nimü köi lı lö müt gufuyo oxon yoüti hüwu ko.&emsp;<em>Can you go to the store for some eggs?</em></p>
   <p>noyo wëko muni pı söpo oxon oütö.&emsp;<em>I'm saving up for a car.</em></p>
-  <p>küu motsı yök oxon zuwopü.&emsp;<em>Don't wait for an answer.</em></p>
+  <p>küu motsı yök oxon zuwobü.&emsp;<em>Don't wait for an answer.</em></p>
   <p>niün sölü müt nimü oxon zık.&emsp;<em>What did he ask you for?</em></p>
 </HisyeoTabs>
 16. ⛔ By the standards of, usually with the implication that those standards are lower than one might otherwise expect; considering.
 <HisyeoTabs>
   <p>lı üsowo hön woküt nı.&emsp;<em>Fair for its day.</em></p>
   <p>niün lı kiösö hön umo wohi nokdo.&emsp;<em>She's spry for an old lady.</em></p>
-  <p>niün lı ovinë ëto hön düi üsën yë nokdo.&emsp;<em>He's very mature, for a two-year-old.</em></p>
+  <p>niün lı ofinë ëto hön düi üsën yë nokdo.&emsp;<em>He's very mature, for a two-year-old.</em></p>
 </HisyeoTabs>
 17. ⛔ To be, or as being. 
 <HisyeoTabs>
@@ -300,7 +300,7 @@ entry](https://en.wiktionary.org/wiki/for).
 <HisyeoTabs>
   <p>oxon nıxin yë timiok pipök.&emsp;<em>O for the wings of a dove.</em></p>
   <p>oxon nıxin vos lı lö vio nu.&emsp;<em>Ah! for wings to soar …</em></p>
-  <p>hön ipüdü oxon cöüvon yë cëo kut ze.&emsp;<em>And now for a slap-up meal!</em></p>
+  <p>hön ibüdü oxon cöüvon yë cëo kut ze.&emsp;<em>And now for a slap-up meal!</em></p>
 </HisyeoTabs>
 20. ⛔ (in expressions such as 'for a start') Introducing the first item(s) in a potential sequence .
 <HisyeoTabs>
@@ -313,7 +313,7 @@ entry](https://en.wiktionary.org/wiki/for).
 </HisyeoTabs>
 22. ⛔ (UK) Due for or facing (a certain outcome or fate).
 <HisyeoTabs>
-  <p>niün lı ëo kopüt pı mülü ölë mëdüson in ondo ulyö. niün pı ipüdü pono xe nocido wëloı niün löicök.&emsp;<em>He totally screwed up that project. Now he's surely for the sack.</em></p>
+  <p>niün lı ëo kobüt pı mülü ölë mëdüson in ondo ulyö. niün pı ibüdü pono xe nocido wëloı niün löicök.&emsp;<em>He totally screwed up that project. Now he's surely for the sack.</em></p>
 </HisyeoTabs>
 23. ⛔ (chiefly US) Out of; used to indicate a fraction, a ratio
 <HisyeoTabs>
@@ -362,7 +362,7 @@ some of the senses of the word "despite".
 
 ### Collaborator
 
-The <HisyeoWord is='ovek'/> particle precedes this noun phrase.
+The <HisyeoWord is='ofek'/> particle precedes this noun phrase.
 
 This role is used for NPs that represent a fellow actor that is also engaged in
 the same action as the subject. However, the NP is not considered a subject of
@@ -384,7 +384,7 @@ detail, or a condition for the underlying sentence. In English, this represents
 some of the senses of the words "regarding", "given", "as for", and "when".
 
 <HisyeoTabs>
-  <p>noyo yünyoü sölü hön zuwopü ılık.&emsp;<em>"I have a question regarding your earlier answers."</em></p>
+  <p>noyo yünyoü sölü hön zuwobü ılık.&emsp;<em>"I have a question regarding your earlier answers."</em></p>
 </HisyeoTabs>
 
 Also, when you would like to utilize an adjective complement to complete the
@@ -402,7 +402,7 @@ topic/context that is something other than the marked noun phrase. In English,
 this represents some of the senses of the word "regardless".
 
 <HisyeoTabs>
-  <p>umo Depölo mokon si ünvünö nomü hön yök longı nı.&emsp;<em>"Deborah ate the broccoli regardless its color."</em></p>
+  <p>umo Depölo mokon si ünfünö nomü hön yök longı nı.&emsp;<em>"Deborah ate the broccoli regardless its color."</em></p>
 </HisyeoTabs>
 
 ### Counter-Agent
@@ -473,7 +473,7 @@ boundaries in time or space that the action occurs between. In English, this
 represents some of the senses of the word "between".
 
 <HisyeoTabs>
-  <p>köi mokon ü noyo cö wutun yë hövezi gemolen et xe gıtno piek.&emsp;<em>"I could eat a hamburger."</em></p>
+  <p>köi mokon ü noyo cö wutun yë höfezi gemolen et xe gıtno piek.&emsp;<em>"I could eat a hamburger."</em></p>
 </HisyeoTabs>
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
