--- a/docs/reference/word_types/verbs.mdx
+++ b/docs/reference/word_types/verbs.mdx
@@ -50,8 +50,8 @@ are usually considered to be imperfective and not perfect (since there is a
 particle that can specify that the action is perfect).
 
 <HisyeoTabs>
-    <p>hoi woküt zık ü nü mokon hoi pıtün cokyen övo.&emsp;<em>What time are we eating this evening?</em></p>
-    <p>vonolon lunsol ipüwë müt noyo.&emsp;<em>The monkey is throwing rocks at me.</em></p>
+    <p>hoi woküt zık ü nü mokon hoi pıtün cokyen öfo.&emsp;<em>What time are we eating this evening?</em></p>
+    <p>vonolon lunsol ibüwë müt noyo.&emsp;<em>The monkey is throwing rocks at me.</em></p>
 </HisyeoTabs>
 
 ### Irrealis
@@ -79,7 +79,7 @@ frame the predicate of a question, it has the effect of asking for permission.
     <p>noyo köi sıtyo hoı ulyö ko.&emsp;<em>May I sit there?</em></p>
     <p>mocko yë umo Xılödingu köi lı gö yodo köi lı yök gö hoi dıpo dinci.&emsp;<em>Schrödinger's cat may or may not be in the box</em></p>
     <p>nimü köi köto si pı sëlöhö yë pökpün&emsp;<em>You might have warned me about the thunderstorm.</em></p>
-    <p>noyo köi lı lö müt köndodü lëkın noyo göcidon si yök pı öhël.&emsp;<em>I might go to the party, but I haven't decided yet.</em></p>
+    <p>noyo köi lı lö müt köndodü onö lëkın noyo göcidon si yök pı öhël.&emsp;<em>I might go to the party, but I haven't decided yet.</em></p>
     <p>noyo köi lı gö hoi sıtyo küldü lëkin noyo pı möcipo völun vos wëilun müt noyo mıslı umo wohi.&emsp;<em>I might be in a wheelchair, but I still want to be treated as a lady.</em></p>
     <p>noyo köi gomi piek potuk süwit vëlcin.&emsp;<em>Might I take the last biscuit?</em></p>
     <p>nü köi puswen vın xe lı len eswen yoüti ci.&emsp;<em>Yeah, I think we might need something a bit sturdier.</em></p>
@@ -101,7 +101,7 @@ explicitly described or implied.
     <p>noyo müt nimü pit sölü xe sityo pı koli.&emsp;<em>I would ask you all to sit down.</em></p>
     <p>noyo müt goniso vos niün lı si cok pı ılık.&emsp;<em>I would imagine that they have already left.</em></p>
     <p>niün lı köxentë yë mevüs oxon vos niün pit punyentoc si xe pesol zınkon.&emsp;<em>He's very security-conscious, so he would have remembered to lock the door.</em></p>
-    <p>niün pit lı gö hoi sınsi Lundun pı ipüdü cokyen.&emsp;<em>They would be arriving in London round about now.</em></p>
+    <p>niün pit lı gö hoi sınsi Lundun pı ibüdü cokyen.&emsp;<em>They would be arriving in London round about now.</em></p>
 </HisyeoTabs>
 
 :::info The different conditional classifications of English
@@ -134,7 +134,7 @@ differentiation of syntax occurs in Hisyëö.
     <p>hön vos niün sölü müt noyo, noyo ke vohoso pësnëhot niün pı diyondë ëto.&emsp;<em>If he asks me, I will consider his proposal carefully.</em></p>
     <p>hön vos nimü lı ëo voüt, umo ke vısun ëo ölë nimü.&emsp;<em>If you make a mistake, someone will let you know.</em></p>
     <p>hoi hüzon yë lono mutyu cıhöü küu lı lö müt poxö noyo.&emsp;<em>If it rains this afternoon, come round to my place!</em></p>
-    <p>hön vos nimü lı cok ipüdü, nimü ke monodo&emsp;<em>If you leave now, you will still catch your train.</em></p>
+    <p>hön vos nimü lı cok ibüdü, nimü ke monodo&emsp;<em>If you leave now, you will still catch your train.</em></p>
 </HisyeoTabs>
 
 - **Second conditional**: These conditionals are sentences used to describe
@@ -144,7 +144,7 @@ differentiation of syntax occurs in Hisyëö.
 <HisyeoTabs>
     <p>hön vos noyo süko köndodü, ü noyo pit lı gö hoi eswen niün.&emsp;<em>If I liked parties, I would attend more of them.</em></p>
     <p>hön vos lı hüzon hoi lono uklo, ü umo pit lı cıvulo hoi titon.&emsp;<em>If it rained tomorrow, people would dance in the street.</em></p>
-    <p>hön vos nimü lı cok pı ipüdü, ü nimü pı guvıs pit doicël oütö kiskö nimü.&emsp;<em>If you left now, you would still catch your train.</em></p>
+    <p>hön vos nimü lı cok pı ibüdü, ü nimü pı gufıs pit doicël oütö kiskö nimü.&emsp;<em>If you left now, you would still catch your train.</em></p>
 </HisyeoTabs>
 
 - **Third conditional**: These conditionals are sentences used to describe
@@ -169,8 +169,8 @@ differentiation of syntax occurs in Hisyëö.
   conditional).
 
 <HisyeoTabs>
-    <p>hön vos nimü tüu si wëloı pı dündon, nü pit yünyoü yök ixölö övo pı ipüdü.&emsp;<em>If you had done your job properly, we wouldn't be in this mess now.</em></p>
-    <p>hön vos noyo lı si ëo hünsüon ölë umo Keli, noyo pit niwos yök hoi küöcyo Elvu pı ipüdü.&emsp;<em>If I hadn't married Kelly, I wouldn't be living in Scotland now.</em></p>
+    <p>hön vos nimü tüu si wëloı pı dündon, nü pit yünyoü yök ixölö öfo pı ibüdü.&emsp;<em>If you had done your job properly, we wouldn't be in this mess now.</em></p>
+    <p>hön vos noyo lı si ëo hünsüon ölë umo Keli, noyo pit niwos yök hoi küöcyo Elvu pı ibüdü.&emsp;<em>If I hadn't married Kelly, I wouldn't be living in Scotland now.</em></p>
     <p>hön vos nü lı umo güexo pı ılik, nü pit tüu si yök nı mıslı ulyö.&emsp;<em>If we were soldiers, we wouldn't have done it like that.</em></p>
 </HisyeoTabs>
 
@@ -188,7 +188,7 @@ rectify the state of things.
     <p>noyo küu lı yöüli müt nimü.&emsp;<em>I ought to help you.</em></p>
     <p>nü küu lı lö ze.&emsp;<em>Let's go!</em></p>
     <p>küu gomi oksün ulyö.&emsp;<em>Don't take that meat.</em></p>
-    <p>ü yüpik noyo küu lı gö ovek nimü lötven.&emsp;<em>May my love be with you.</em></p>
+    <p>ü yüpik noyo küu lı gö ofek nimü lötven.&emsp;<em>May my love be with you.</em></p>
 </HisyeoTabs>
 
 
@@ -201,7 +201,7 @@ This marker (<HisyeoWord is='ke'/>) indicates what linguists call the **future
 tense**.
 
 <HisyeoTabs>
-    <p>umo Zon ke lı cok hoı pıtün övo.&emsp;<em>John is going to leave tonight.</em></p>
+    <p>umo Zon ke lı cok hoı pıtün öfo.&emsp;<em>John is going to leave tonight.</em></p>
     <p>noyo ke golo tömös onö.&emsp;<em>I will/shall read the book</em></p>
     <p>nü küu vohoso ulyö, nü ke tüu ko. &emsp;<em>Let us examine that, shall we?</em></p>
     <p>kut yë umo kölmüdul ke monodo nimü hoi lono uklo.&emsp;<em>One of our salesmen will visit you tomorrow.</em></p>
