--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -27,8 +27,8 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>pinton lono ke poivön küon hoi lono uklo.&emsp;<em>The sun will shine tomorrow.</em></p>
 <p>pinton lono poivön küon pı ëto.&emsp;<em>The sun shines brightly.</em></p>
 <p>pinton lono yë küon ëto poivön küon.&emsp;<em>The bright sun shines.</em></p>
-<p>pinton lono di cën pı möcipo hoi ipüdü.&emsp;<em>The sun is rising now.</em></p>
-<p>möi umo pı oltü öitun si.&emsp;<em>All the people shouted.</em></p>
+<p>pinton lono di cën pı möcipo hoi ibüdü.&emsp;<em>The sun is rising now.</em></p>
+<p>möi umo onö pı oltü öitun si.&emsp;<em>All the people shouted.</em></p>
 <p>yoüti umo pı oltü öitun si.&emsp;<em>Some of the people shouted.</em></p>
 <p>ëto umo pı oltü öitun pı düi vun.&emsp;<em>Many of the people shouted twice.</em></p>
 <p>umo xowosë pı ëto pı oltü öitun.&emsp;<em>Happy people often shout.</em></p>
@@ -36,12 +36,12 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>mocko xonluk onö tüu si zoston müt solwöc miëpıl.&emsp;<em>The kitten jumped onto the table.</em></p>
 <p>mocko xonluk cüti noyo lı si lö pı cok. &emsp;<em>My little kitten walked away.</em></p>
 <p>lı hüzon pı möcipo.&emsp;<em>It's raining.</em></p>
-<p>hüzon di si sël.&emsp;<em>The rain came down.</em></p>
-<p>mocko xonluk onö pı möcipo kelo hoi hüzon.&emsp;<em>The kitten is playing in the rain.</em></p>
-<p>niltügu si hüzon.&emsp;<em>The rain has stopped.</em></p>
-<p>pı zelen ke niltügu hüzon.&emsp;<em>Soon the rain will stop.</em></p>
-<p>noyo xiwon vos pı zelen niltügu hüzon.&emsp;<em>I hope the rain stops soon.</em></p>
-<p>pı kut vun ü zonwul hönyo nıwos si övo.&emsp;<em>Once wild animals lived here.</em></p>
+<p>hüzon onö di si sël.&emsp;<em>The rain came down.</em></p>
+<p>mocko xonluk onö pı möcipo kelo hoi hüzon onö.&emsp;<em>The kitten is playing in the rain.</em></p>
+<p>niltügu si hüzon onö.&emsp;<em>The rain has stopped.</em></p>
+<p>pı zelen ke niltügu hüzon onö.&emsp;<em>Soon the rain will stop.</em></p>
+<p>noyo xiwon vos pı zelen niltügu hüzon onö.&emsp;<em>I hope the rain stops soon.</em></p>
+<p>pı kut vun ü zonwul hönyo nıwos si öfo.&emsp;<em>Once wild animals lived here.</em></p>
 <p>pı dilë ü niün vohoso si ünhılun niün.&emsp;<em>Slowly she looked around.</em></p>
 <p>küu lı lö pı cok.&emsp;<em>Go away!</em></p>
 <p>nü küu lı lö.&emsp;<em>Let's go!</em></p>
@@ -49,58 +49,58 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>noyo ke lı xowosë hön xe lı lö.&emsp;<em>I will be happy to go.</em></p>
 <p>niün ke lı gik pı zelen.&emsp;<em>He will arrive soon.</em></p>
 <p>gundolë yë lözic onö lı si tulkolyun pı cok.&emsp;<em>The baby's ball has rolled away.</em></p>
-<p>düi umo moskül xonluk onö wëloı pı möcipo ovek xokön dizel.&emsp;<em>The two boys are working together.</em></p>
+<p>düi umo moskül xonluk onö wëloı pı möcipo ofek xokön dizel.&emsp;<em>The two boys are working together.</em></p>
 <p>üsmon ximu onö pı könën ke di vonmot.&emsp;<em>This mist will probably clear away.</em></p>
-<p>inpoli hosin lı niök hoi xokön.&emsp;<em>Lovely flowers are growing everywhere.</em></p>
+<p>inboli hosin lı niök hoi xokön.&emsp;<em>Lovely flowers are growing everywhere.</em></p>
 <p>nü küu mokon pı dilë eswen.&emsp;<em>We should eat more slowly.</em></p>
-<p>nimü di si hoi övo pı hëlxun otıkon.&emsp;<em>You have come too soon.</em></p>
+<p>nimü di si hoi öfo pı hëlxun otıkon.&emsp;<em>You have come too soon.</em></p>
 <p>nimü küu cukto pı müvëü eswen.&emsp;<em>You must write more neatly.</em></p>
 <p>hön elentët müstokin lı totsı ü nıwos moxo cënpö küzoü.&emsp;<em>Directly opposite stands a wonderful palace.</em></p>
 <p>zowo yë umo Henli nocido si titon niün. &emsp;<em>Henry's dog is lost.</em></p>
 <p>mocko noyo lı nëlö.&emsp;<em>My cat is black.</em></p>
-<p>döcui umo yë umo wohi xonluk cüti onö lı kopüt.&emsp;<em>The little girl's doll is broken.</em></p>
-<p>noyo pı sodolun lı conzodo sunpülno.&emsp;<em>I usually sleep soundly.</em></p>
+<p>döcui umo yë umo wohi xonluk cüti onö lı kobüt.&emsp;<em>The little girl's doll is broken.</em></p>
+<p>noyo pı sodolun lı conzodo sunbülno.&emsp;<em>I usually sleep soundly.</em></p>
 <p>mënyüu onö pı viki lı lö oxon xe doicël umo Zek.&emsp;<em>The children ran after Jack.</em></p>
 <p>noyo köi kelo cıhöü woküt kon pëüdo.&emsp;<em>I can play after school.</em></p>
 <p>nü lı si lö müt sınsi oxon xe monodo.&emsp;<em>We went to the village for a visit.</em></p>
 <p>nü lı si gik hoi xüto.&emsp;<em>We arrived at the river.</em></p>
-<p>noyo pı öhël motsı hön nimü.&emsp;<em>I have been waiting for you.</em></p>
+<p>noyo motsı si pı möcipo oxon nimü.&emsp;<em>I have been waiting for you.</em></p>
 <p>öni mühoyon onö sıtyo si hoi ünhılun yë mötö onö.&emsp;<em>The campers sat around the fire.</em></p>
-<p>umo wohi xonluk cüti xe ovek mocko xonluk, sıtyo si hoi vëlkonö noyo.&emsp;<em>A little girl with a kitten sat near me.</em></p>
-<p>mënyüu onö motsı si hoi zınkon hön motüo moskül niün.&emsp;<em>The child waited at the door for her father.</em></p>
-<p>hoi lono xopëk ü umo wohi xonluk yë nokdo möi en sınsi onö nocido si mocko xonluk niün.&emsp;<em>Yesterday the oldest girl in the village lost her kitten.</em></p>
-<p>lözic si nimü hoi sınsi övo ko.&emsp;<em>Were you born in this village?</em></p>
+<p>umo wohi xonluk cüti xe ofek mocko xonluk, sıtyo si hoi vëlkonö noyo.&emsp;<em>A little girl with a kitten sat near me.</em></p>
+<p>mënyüu onö motsı si hoi zınkon oxon motüo moskül niün.&emsp;<em>The child waited at the door for her father.</em></p>
+<p>hoi lono xopëk ü umo wohi xonluk yë nokdo möi en ozüul yë sınsi onö nocido si mocko xonluk niün.&emsp;<em>Yesterday the oldest girl in the village lost her kitten.</em></p>
+<p>lözic si nimü hoi sınsi öfo ko.&emsp;<em>Were you born in this village?</em></p>
 <p>sıskın moskül nimü köi lı cıvulo pı xön ko.&emsp;<em>Can your brother dance well?</em></p>
 <p>umo moskül onö lı si cok ko.&emsp;<em>Did the man leave?</em></p>
 <p>sıskın wohi nimü lı gik oxon nimü ko.&emsp;<em>Is your sister coming for you?</em></p>
 <p>nimü köi lı gik hoi lono uklo ko.&emsp;<em>Can you come tomorrow?</em></p>
 <p>öni nıwos vëlkonö lı si cok hön yogö üsën cunyü.&emsp;<em>Have the neighbors gone away for the winter?</em></p>
 <p>timiok hünsık pı sodolun kontol hoi hüzon ko.&emsp;<em>Does the robin sing in the rain?</em></p>
-<p>nimü lı lö ovek nü müt sikin kon kontol.&emsp;<em>Are you going with us to the concert?</em></p>
+<p>nimü lı lö ofek nü müt sikin kon kontol.&emsp;<em>Are you going with us to the concert?</em></p>
 <p>nimü hoi ozüul woküt tulutı piömu nomü hüzon ko.&emsp;<em>Have you ever travelled in the jungle?</em></p>
 <p>nü oütö vio woyü müt cën yë xüto onö lon yoüti mönpılı xokön.&emsp;<em>We sailed down the river for several miles.</em></p>
 <p>xokön umo vısun kon wëtodü.&emsp;<em>Everybody knows about hunting.</em></p>
 <p>hoi lono küon xe cıhöü woküt vos pinton lono socok xe di vëlkonö eswen, ü nü socok si müt tohılök pümi.&emsp;<em>On a Sunny morning after the solstice we started for the mountains.</em></p>
 <p>umo Ton lı si liülë nënko cülci yë vonolon.&emsp;<em>Tom laughed at the monkey's tricks.</em></p>
-<p>umo moskül nokdo xe ovek nüyo yë kon lö wowoë, lı si totsı hoi söpo yë pëlëtë gosil.&emsp;<em>An old man with a walking stick stood beside the fence.</em></p>
+<p>umo moskül nokdo xe ofek nüyo yë kon lö wowoë, lı si totsı hoi söpo yë pëlëtë gosil.&emsp;<em>An old man with a walking stick stood beside the fence.</em></p>
 <p>ölë nıwos yë cüi nomü lı si ëo vicwo ü tolën nomü weltö.&emsp;<em>The squirrel's nest was hidden by drooping boughs.</em></p>
 <p>oüdi cüti motsı si pı sonti hoi sël yë pölvëlë hüzon pukü müt pinton lono yë yogö üsën niök et yë tüt yoüti.&emsp;<em>The little seeds waited patiently under the snow for the warm spring sun.</em></p>
-<p>ëto umo wohi xonluk xe ovek wutun inpoli xe hoi wik, lı cıvulo hoi ünhılun yë mötö vimösyös.&emsp;<em>Many little girls with wreaths of flowers on their heads danced around the bonfire.</em></p>
+<p>ëto umo wohi xonluk xe ofek wutun inboli xe hoi wik, lı cıvulo hoi ünhılun yë mötö vimösyös.&emsp;<em>Many little girls with wreaths of flowers on their heads danced around the bonfire.</em></p>
 <p>öni doknü onö yë dıpo yë hülü in zohit et onö lı si zigil müt sokovü.&emsp;<em>The cover of the basket fell to the floor.</em></p>
 <p>umo moskül xonluk kut onö yë gito onö niltügu si hoi zınkon kon gik.&emsp;<em>The first boy in the line stopped at the entrance.</em></p>
 <p>hoi solwöc yë töxütsı pümi hoi limien yë nıwos cüti nıwos si ü umo wohi nokdo colot.&emsp;<em>On the top of the hill in a little hut lived a wise old woman.</em></p>
 <p>hoi woküt yë kon nıwos yë venüo londuluk onö ü nü pı ëto lı lö vio wowoë hoi comen zonwul onö.&emsp;<em>During our residence in the country we often walked in the pastures.</em></p>
 <p>hoi woküt zık ü monodo sün sınsi cënpö ke lı gik.&emsp;<em>When will your guests from the city arrive?</em></p>
-<p>hoi vëlkonö yë göyu onö yë xüto onö ü titon nı lı si ınvultin pı cies müt kılukü.&emsp;<em>Near the mouth of the river, its course turns sharply towards the East.</em></p>
+<p>hoi vëlkonö yë göyu onö yë xüto onö ü titon nı lı si ınfultin pı cies müt kılukü.&emsp;<em>Near the mouth of the river, its course turns sharply towards the East.</em></p>
 <p>gıtno düi tohılök pümi ıwotë lı tıgoyo ü venüo süpöl yë pümi sël.&emsp;<em>Between the two lofty mountains lay a fertile valley.</em></p>
-<p>gıtno gos lisik liun si inpoli hünsık ıwotë.&emsp;<em>Among the wheat grew tall red poppies.</em></p>
+<p>gıtno gos lisik liun si inboli hünsık ıwotë.&emsp;<em>Among the wheat grew tall red poppies.</em></p>
 <p>ölë ziziyo len onö yë ëto nomü onö lı ëo vunlit sün pümi onö.&emsp;<em>The strong roots of the oak trees were torn from the ground.</em></p>
 <p>pinton lono onö pı sël gıtno tolën nomü dëko si mënyüu onö xe kelo.&emsp;<em>The sun looked down through the branches upon the children at play.</em></p>
 <p>woyü vitikös üslëk söpo ënkömön mıslı kon okülo sütüö.&emsp;<em>The west wind blew across my face like a friendly caress.</em></p>
 <p>küldü onö yë doi lı si tulutı sokovü pı tulkolyun.&emsp;<em>The spool of thread rolled across the floor.</em></p>
-<p>dıpo yë gos xe liun, lı si totsı hoi kümun opoki.&emsp;<em>A box of growing plants stood in the Window.</em></p>
+<p>dıpo yë gos xe liun, lı si totsı hoi kümun oboki.&emsp;<em>A box of growing plants stood in the Window.</em></p>
 <p>noyo lı xowosë ëto.&emsp;<em>I am very happy.</em></p>
-<p>küöxı nomü zingu övo yünyoü ëto mötowo yë iskö küöxı.&emsp;<em>These oranges are juicy.</em></p>
+<p>küöxı nomü zingu öfo yünyoü ëto mötowo yë iskö küöxı.&emsp;<em>These oranges are juicy.</em></p>
 <p>ximu xömütlö lı xöpoi.&emsp;<em>Sea water is salty.</em></p>
 <p>titon onö lı mülü yë umo.&emsp;<em>The streets are full of people.</em></p>
 <p>pölvëlë süwit sopölë ëo süwit.&emsp;<em>Sugar tastes sweet.</em></p>
@@ -108,39 +108,39 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>vos umo wohi xonluk cüti oncëmon tölki, lı xoinpo.&emsp;<em>The little girl seemed lonely.</em></p>
 <p>motüo moskül yë umo moskül xonluk cüti pı kut vun lı si öni tulutı xömütlö.&emsp;<em>The little boy's father had once been a sailor.</em></p>
 <p>noyo nocido si lipü polce nulun noyo.&emsp;<em>I have lost my blanket.</em></p>
-<p>timiok yë wıkse cınöpu köson si nıwos niün hoi nomü onö yë küöxı hünsık süwit.&emsp;<em>A robin has built his nest in the apple tree.</em></p>
+<p>timiok yë wıkse cınöbu köson si nıwos niün hoi nomü onö yë küöxı hünsık süwit.&emsp;<em>A robin has built his nest in the apple tree.</em></p>
 <p>hoi mutyu lono ü nü mokon si cöüvon nü hoi söpo titon.&emsp;<em>At noon we ate our lunch by the roadside.</em></p>
 <p>umo Zönsu pön si öni wëtü oxon umo moskül xonluk cüti niün.&emsp;<em>Mr. Jones made a knife for his little boy.</em></p>
 <p>ëtsö yë öitun niün lı xoinpo yë xowosë ëto.&emsp;<em>Their voices sound very happy.</em></p>
-<p>lono övo lı lono düsul ko.&emsp;<em>Is today Monday?</em></p>
+<p>lono öfo lı lono düsul ko.&emsp;<em>Is today Monday?</em></p>
 <p>woloko onö lı si zigil sün nomü ko.&emsp;<em>Have all the leaves fallen from the tree?</em></p>
 <p>nimü ke ondo si cızi hoi woküt ko.&emsp;<em>Will you be ready on time?</em></p>
-<p>nimü ke luvono cukto övo oxon noyo ko.&emsp;<em>Will you send this message for me?</em></p>
+<p>nimü ke lufono cukto öfo oxon noyo ko.&emsp;<em>Will you send this message for me?</em></p>
 <p>nimü pı möcipo motsı noyo ko.&emsp;<em>Are you waiting for me?</em></p>
-<p>övo lı lözic mocko kut yë zomo kon lözic ko.&emsp;<em>Is this the first kitten of the litter?</em></p>
-<p>voko mevüs wowoë övo lı otıkon cënpö hön nimü ko.&emsp;<em>Are these shoes too big for you?</em></p>
+<p>öfo lı lözic mocko kut yë zomo kon lözic ko.&emsp;<em>Is this the first kitten of the litter?</em></p>
+<p>voko mevüs wowoë öfo lı otıkon cënpö hön nimü ko.&emsp;<em>Are these shoes too big for you?</em></p>
 <p>pı zık lı nulto ü xüto.&emsp;<em>How wide is the River?</em></p>
 <p>küu tenkin.&emsp;<em>Listen.</em></p>
-<p>küu sıtyo övo yë vëlkonö noyo.&emsp;<em>Sit here by me.</em></p>
-<p>ölë övo küu lı ëo cosni möcipo ılık lono uklo.&emsp;<em>Keep this secret until tomorrow.</em></p>
-<p>küu lı cok ovek nü.&emsp;<em>Come with us.</em></p>
-<p>küu oköt sütüö nimü ovek nimü.&emsp;<em>Bring your friends with you.</em></p>
+<p>küu sıtyo öfo yë vëlkonö noyo.&emsp;<em>Sit here by me.</em></p>
+<p>ölë öfo küu lı ëo cosni möcipo ılık lono uklo.&emsp;<em>Keep this secret until tomorrow.</em></p>
+<p>küu lı cok ofek nü.&emsp;<em>Come with us.</em></p>
+<p>küu oköt sütüö nimü ofek nimü.&emsp;<em>Bring your friends with you.</em></p>
 <p>küu diyondë pı cönkök.&emsp;<em>Be careful.</em></p>
 <p>küu yünyoü yoüti iskö höncöü.&emsp;<em>Have some tea.</em></p>
 <p>umo Pıpu ün zowo niün lı si sütüö ëto.&emsp;<em>Pip and his dog were great friends.</em></p>
 <p>umo Zon ün umo Ilısopet lı sıskın.&emsp;<em>John and Elizabeth are brother and sister.</em></p>
-<p>nimü ün noyo ke lı lö ovek xokön dizel.&emsp;<em>You and I will go together.</em></p>
-<p>niün lı ëo put ölë möi zınkon ün kümun opoki.&emsp;<em>They opened all the doors and windows.</em></p>
+<p>nimü ün noyo ke lı lö ofek xokön dizel.&emsp;<em>You and I will go together.</em></p>
+<p>niün lı ëo put ölë möi zınkon ün kümun oboki.&emsp;<em>They opened all the doors and windows.</em></p>
 <p>niün lı cüti lëkın len.&emsp;<em>He is small, but strong.</em></p>
-<p>müt nomü övo vio hiskünco İngulıc somo nomü Ök yodo nomü Mëpul ko.&emsp;<em>Is this tree an oak or a maple?</em></p>
+<p>müt nomü öfo vio hiskünco İngulıc somo nomü Ök yodo nomü Mëpul ko.&emsp;<em>Is this tree an oak or a maple?</em></p>
 <p>okoxu lı xoinpo in dëko mıslı zöi yodo düsul ko.&emsp;<em>Does the sky look blue or gray?</em></p>
-<p>küu lı lö ovek motüo moskül yodo motüo wohi.&emsp;<em>Come with your father or mother.</em></p>
+<p>küu lı lö ofek motüo moskül yodo motüo wohi.&emsp;<em>Come with your father or mother.</em></p>
 <p>noyo lı picüon lëkın lı xowosë ëto.&emsp;<em>I am tired, but very happy.</em></p>
 <p>niün kelo kontol vio yön in kontol yë mökövo in üslëk et küzoü niün.&emsp;<em>He played a tune on his wonderful flute.</em></p>
 <p>müt könyëc yë wuto tukwos ü lono di ëto gosil eswen.&emsp;<em>Toward the end of August the days grow much shorter.</em></p>
 <p>zomo cënpö yë umo güexo tulutı töxütsı pümi onö ün comen onö.&emsp;<em>A company of soldiers marched over the hill and across the meadow.</em></p>
 <p>yogö kut yë kiso lı voko sunyotni ëto.&emsp;<em>The first part of the story is very interesting.</em></p>
-<p>timiok nëlö onö müncoti yoüti ipüwë hoi xolu zilyois onö ün lı ëo cën ölë ximu müt dinzoü onö.&emsp;<em>The crow dropped some pebbles into the pitcher and raised the water to the brim.</em></p>
+<p>timiok nëlö onö müncoti yoüti ibüwë hoi xolu zilyois onö ün lı ëo cën ölë ximu müt dinzoü onö.&emsp;<em>The crow dropped some pebbles into the pitcher and raised the water to the brim.</em></p>
 <p>ü lözic onö lı si hoküxı lı si liülë pı xowosë.&emsp;<em>The baby clapped her hands and laughed in glee.</em></p>
 <p>küu niltügu kelo nimü küu lı homüs.&emsp;<em>Stop your game and be quiet.</em></p>
 <p>ü tenkin yë yön in kontol di pı oltü eswen pı oltü eswen.&emsp;<em>The sound of the drums grew louder and louder.</em></p>
@@ -148,19 +148,19 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>umo moskül xonluk ulyö ke cinli wüöt küzoü.&emsp;<em>That boy will have a wonderful trip.</em></p>
 <p>niün cöüvon lisik yë hülü cöt ıwotë müt dumoko pinë sıtyo hoi ünhılun yë mötö ün mokon nı.&emsp;<em>They popped corn, and then sat around the fire and ate it.</em></p>
 <p>niün lı si pilüs hoi düi kelo kut lëkın nocido nı vëlcin.&emsp;<em>They won the first two games, but lost the last one.</em></p>
-<p>küu gomi lipü övo yë köto vos cukto si, küu oköt müt motüo wohi nimü pinë küu motsı zuwopü.&emsp;<em>Take this note, carry it to your mother; and wait for an answer.</em></p>
+<p>küu gomi lipü öfo yë köto vos cukto si, küu oköt müt motüo wohi nimü pinë küu motsı zuwobü.&emsp;<em>Take this note, carry it to your mother; and wait for an answer.</em></p>
 <p>noyo di si wili pı hëlxun öntön si pı viki ün lı si lö sël müt cöüvon kut.&emsp;<em>I awoke early, dressed hastily, and went down to breakfast.</em></p>
 <p>o. noyo doicël si nimü voxo.&emsp;<em>Aha! I have caught you!</em></p>
-<p>doi övo lı otıkon gosil ze.&emsp;<em>This string is too short!</em></p>
+<p>doi öfo lı otıkon gosil ze.&emsp;<em>This string is too short!</em></p>
 <p>oiyo. woyü üslëk si öni doknü wik noyo pı mönpılı.&emsp;<em>Oh, dear! the wind has blown my hat away!</em></p>
 <p>oiyo. ü vısun nëös ulyö lı küyö löicök.&emsp;<em>Alas! that news is sad indeed!</em></p>
 <p>oiyo. woyü cunyü ulyö lı ëo pukü ölë nosiko noyo voxo.&emsp;<em>Whew! that cold wind freezes my nose!</em></p>
-<p>nimü lı zötëstö tüt pı ipüdü ko.&emsp;<em>Are you warm enough now?</em></p>
+<p>nimü lı zötëstö tüt pı ibüdü ko.&emsp;<em>Are you warm enough now?</em></p>
 <p>niün tenkin si gongoxi hoi otıkon müun.&emsp;<em>They heard the warning too late.</em></p>
 <p>nü lı umo mövi yüpik venüo nü.&emsp;<em>We are a brave people, and love our country.</em></p>
 <p>möi mënyüu lı si gik lëkın mënyüu Meli.&emsp;<em>All the children came except Mary.</em></p>
-<p>umo Zek ogolol züngö mülü yë ipüwë cüti lunsol nı müt zomo ximu.&emsp;<em>Jack seized a handful of pebbles and threw them into the lake.</em></p>
-<p>nıwos cömël övo lı si totsı hoi töxütsı pümi sël hoi yoüti mönpılı xe sün sınsi onö.&emsp;<em>This cottage stood on a low hill, at some distance from the village.</em></p>
+<p>umo Zek ogolol züngö mülü yë ibüwë cüti lunsol nı müt zomo ximu.&emsp;<em>Jack seized a handful of pebbles and threw them into the lake.</em></p>
+<p>nıwos cömël öfo lı si totsı hoi töxütsı pümi sël hoi yoüti mönpılı xe sün sınsi onö.&emsp;<em>This cottage stood on a low hill, at some distance from the village.</em></p>
 <p>hoi pıtün hëlxun xön yë yogö üsën tüt ü düi umo nokdo sıtyo hoi wokto yë zınkon onö yë nıwos cömël niün.&emsp;<em>On a fine summer evening, the two old people were sitting outside the door of their cottage.</em></p>
 <p>müt timiok nü somo timiok Zekö.&emsp;<em>Our bird's name is Jacko.</em></p>
 <p>xüto onö vısun titon onö müt xömütlö.&emsp;<em>The river knows the way to the sea.</em></p>
@@ -169,22 +169,22 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>nıwos cüti yünyoü si son küncien xe lı küncien kon sıtyo lı küncien kon conzodo lı küncien kon cöüvon yë cüti ëto.&emsp;<em>The little house had three rooms, a sitting room, a bedroom, and a tiny kitchen.</em></p>
 <p>nü monodo si sınsi cüti yë sıskın moskül yë motüo noyo et xe lı sınsi cüti yë cënpö möi en nucoto.&emsp;<em>We visited my uncle's village, the largest village in the world.</em></p>
 <p>nü pëüdo vın nëös hoi xokön lono.&emsp;<em>We learn something new each day.</em></p>
-<p>socok guvuyo onö hoi tiü ëvun yë hëlxun eswen hön wëxön övo.&emsp;<em>The market begins five minutes earlier this week.</em></p>
+<p>socok gufuyo onö hoi tiü ëfun yë hëlxun eswen hön wëxön öfo.&emsp;<em>The market begins five minutes earlier this week.</em></p>
 <p>nimü yosten si otıkon cënpö yë mönpılı ko.&emsp;<em>Did you find the distance too great?</em></p>
 <p>küu lı viki noi umo xonluk.&emsp;<em>Hurry, children.</em></p>
 <p>noi umo wohi xëntil ü noyo ke vütsün hükun nimü.&emsp;<em>Madam, I will obey your command.</em></p>
-<p>hoi övo xe lı sël yë nomü övo, ü niün müt monodo niün lı cüdo si cöüvon yë xön ëto.&emsp;<em>Here under this tree they gave their guests a splendid feast.</em></p>
+<p>hoi öfo xe lı sël yë nomü öfo, ü niün müt monodo niün lı cüdo si cöüvon yë xön ëto.&emsp;<em>Here under this tree they gave their guests a splendid feast.</em></p>
 <p>hön yogö üsën cunyü ü noyo di wili hoi pıtün öntön vio küon vüus sëlpö.&emsp;<em>In winter I get up at night, and dress by yellow candlelight.</em></p>
 <p>küu köto yogö vëlcin yë kiso ulyö pı dizel.&emsp;<em>Tell the last part of that story again.</em></p>
 <p>küu lı viki yodo ü nimü ke lı otıkon müun.&emsp;<em>Be quick or you will be too late.</em></p>
-<p>nimü ke lı lö ovek nü ko yodo motsı hoi övo ko.&emsp;<em>Will you go with us or wait here?</em></p>
-<p>niün pı möi woküt öntön vın yë ëtsö pis et xe pı sodolun lı si ëo vunlit hoi dinzoü, ün hoi lono cunyü lı yök lohot.&emsp;<em>She was always, shabby, often ragged, and on cold days very uncomfortable.</em></p>
+<p>nimü ke lı lö ofek nü ko yodo motsı hoi öfo ko.&emsp;<em>Will you go with us or wait here?</em></p>
+<p>niün pı möi woküt öntön vın yë ëtsö pis et vos pı sodolun ölë nı lı si ëo vunlit hoi dinzoü, ün hoi lono cunyü lı yök lohot.&emsp;<em>She was always, shabby, often ragged, and on cold days very uncomfortable.</em></p>
 <p>küu goniso pı kut pinë küu tüu.&emsp;<em>Think first and then act.</em></p>
-<p>noyo lı si totsı mıslı müxi cüti yë umo wohi xonluk hoi sıtyo xe lı uklo müt kümun opoki, ün dëko si pölvëlë ximu pukü zigil.&emsp;<em>I stood, a little mite of a girl, upon a chair by the window, and watched the falling snowflakes.</em></p>
-<p>müt monodo onö küu möniso pëiku övo noi mënyüu noyo ün müt niün küu köto ıtıhos gonzil nı.&emsp;<em>Show the guests these shells, my son, and tell them their strange history.</em></p>
+<p>noyo lı si totsı mıslı müxi cüti yë umo wohi xonluk hoi sıtyo xe lı uklo müt kümun oboki, ün dëko si pölvëlë ximu pukü zigil.&emsp;<em>I stood, a little mite of a girl, upon a chair by the window, and watched the falling snowflakes.</em></p>
+<p>müt monodo onö küu möniso pëiku öfo noi mënyüu noyo ün müt niün küu köto ıtıhos gonzil nı.&emsp;<em>Show the guests these shells, my son, and tell them their strange history.</em></p>
 <p>küu lı xowosë hön xünyu vın lëkın hön xön möi nimü.&emsp;<em>Be satisfied with nothing but your best.</em></p>
 <p>nü goniso niün mıslı sütüö cöünton nü.&emsp;<em>We consider them our faithful friends.</em></p>
-<p>nü ölë poxö övo ke lı ëo nıwos nü.&emsp;<em>We will make this place our home.</em></p>
+<p>nü ölë poxö öfo ke lı ëo nıwos nü.&emsp;<em>We will make this place our home.</em></p>
 <p>cüi nomü onö ölë nıwos niün lı ëo tüt ün lohot vio vödoloc nulun ün woloko.&emsp;<em>The squirrels make their nests warm and snug with soft moss and leaves.</em></p>
 <p>umo wohi cüti köson öntön yë döcui umo vio cızi niün.&emsp;<em>The little girl made the doll's dress herself.</em></p>
 <p>noyo lı ëo tönkö ölë cızi noyo.&emsp;<em>I hurt myself.</em></p>
@@ -193,18 +193,18 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>nü köi dëko cızi nü hoi ximu.&emsp;<em>We could see ourselves in the water.</em></p>
 <p>küu tüu nı vio cızi nimü.&emsp;<em>Do it yourself.</em></p>
 <p>noyo oncëmon xulmındo yë noyo.&emsp;<em>I feel ashamed of myself.</em></p>
-<p>küu sıtyo hoi övo ovek cızi nimü tölki.&emsp;<em>Sit here by yourself.</em></p>
-<p>ü öntön yë mënyüu wohi cüti yë hondon kon hükun lı vos müt nı zohit si inpoli xe lı inpoli centık yë küöcyo.&emsp;<em>The dress of the little princess was embroidered with roses, the national flower of the Country.</em></p>
+<p>küu sıtyo hoi öfo ofek cızi nimü tölki.&emsp;<em>Sit here by yourself.</em></p>
+<p>ü öntön yë mënyüu wohi cüti yë hondon kon hükun lı vos müt nı zohit si inboli xe lı inboli centık yë küöcyo.&emsp;<em>The dress of the little princess was embroidered with roses, the national flower of the Country.</em></p>
 <p>niün öntön si öntön wik hünsık xe lı ostok onö yë völni.&emsp;<em>They wore red caps, the symbol of liberty.</em></p>
-<p>ovek niün xe mıslı voko mevüs nü, nü lı yök ösölë yë pongösi.&emsp;<em>With him as our protector, we fear no danger.</em></p>
+<p>ofek niün xe mıslı voko mevüs nü, nü lı yök ösölë yë pongösi.&emsp;<em>With him as our protector, we fear no danger.</em></p>
 <p>möi vın moxo niün xe lı polce kümun lı listo lı towë, lı vos pı cies wëko si nı hoi dıpo.&emsp;<em>All her finery, lace, ribbons, and feathers, was packed away in a trunk.</em></p>
 <p>lı si xoinpo ü vos niün wohi lı hulükö, oldıs goniso yë niün moskül mıslı towë timiok.&emsp;<em>Light he thought her, like a feather.</em></p>
 <p>hön xokön yogö üsën niök ün yogö üsën kon kudüdo ü mënyüu yë sıskın motüo et nü cıvü kon monodo kildo müt nü.&emsp;<em>Every spring and fall our cousins pay us a long visit.</em></p>
 <p>hoi piömu këlös nü ü hülü onö pı möcipo lı lünti hön yogö üsën cunyü.&emsp;<em>In our climate the grass remains green all winter.</em></p>
 <p>umo moskül xonluk onö xe oköt si tömös onö, lı si cok.&emsp;<em>The boy who brought the book has gone.</em></p>
-<p>övo lı inpoli onö vos niün lı si ëo kölmüdul ölë nı.&emsp;<em>These are the flowers that you ordered.</em></p>
+<p>öfo lı inboli onö vos niün lı si ëo kölmüdul ölë nı.&emsp;<em>These are the flowers that you ordered.</em></p>
 <p>noyo nocido si tömös onö vos niün müt noyo cüdo nı.&emsp;<em>I have lost the book that you gave me.</em></p>
-<p>öni wëtodü micin xe yünyoü oütö ximu onö, hoi ipüdü pı len sölü cıvü.&emsp;<em>The fisherman who owned the boat now demanded payment.</em></p>
+<p>öni wëtodü micin xe yünyoü oütö ximu onö, hoi ibüdü pı len sölü cıvü.&emsp;<em>The fisherman who owned the boat now demanded payment.</em></p>
 <p>küu lı gik hoi vos nimü lı xokülü.&emsp;<em>Come when you are called.</em></p>
 <p>noyo ke lı gö hoi nıwos noyo hön hüzon.&emsp;<em>I shall stay at home if it rains.</em></p>
 <p>hön vos niün dëko noyo, niün niltügu si.&emsp;<em>When he saw me, he stopped.</em></p>
@@ -224,12 +224,12 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>küon tulutı pı viki eswen en tenkin.&emsp;<em>Light travels faster than sound.</em></p>
 <p>nü yünyoü woküt eswen en niün.&emsp;<em>We have more time than they.</em></p>
 <p>niün yünyoü sütüö eswen en umo xe dën niün.&emsp;<em>She has more friends than enemies.</em></p>
-<p>niün yünyoü muni yë cüti ëto ün ovek hünsüon niün ün tiü mënyüu nıwos poxö sël cüti yë mökövo nomü ün ipüwë.&emsp;<em>He was very poor, and with his wife and five children lived in a little low cabin of logs and stones.</em></p>
+<p>niün yünyoü muni yë cüti ëto ün ofek hünsüon niün ün tiü mënyüu nıwos poxö sël cüti yë mökövo nomü ün ibüwë.&emsp;<em>He was very poor, and with his wife and five children lived in a little low cabin of logs and stones.</em></p>
 <p>hoi vos woyü üslëk si, öni tulutı onö ölë öntön lipü ünhılun si niün pı vëlkonö eswen.&emsp;<em>When the wind blew, the traveler wrapped his mantle more closely around him.</em></p>
-<p>noyo lı guvıs hön vos nü köi lı lö.&emsp;<em>I am sure that we can go.</em></p>
-<p>nü lı si dukwëlıt müt poxö vos nü dëko si inpoli onö hoi.&emsp;<em>We went back to the place where we saw the roses.</em></p>
-<p>"nomü övo lı cën yë tiü dus kildo xokön," lı vos öni liun gos köto si.&emsp;<em>"This tree is fifty feet high," said the gardener.</em></p>
-<p>noyo goniso vos ü oütö kiskö övo lı cok hoi tiü ëvun yë hëlxun eswen hön lono övo.&emsp;<em>I think that this train leaves five minutes earlier today.</em></p>
+<p>noyo lı gufıs hön vos nü köi lı lö.&emsp;<em>I am sure that we can go.</em></p>
+<p>nü lı si dukwëlıt müt poxö vos nü dëko si inboli onö hoi.&emsp;<em>We went back to the place where we saw the roses.</em></p>
+<p>"nomü öfo lı cën yë tiü dus kildo xokön," lı vos öni liun gos köto si.&emsp;<em>"This tree is fifty feet high," said the gardener.</em></p>
+<p>noyo goniso vos ü oütö kiskö öfo lı cok hoi tiü ëfun yë hëlxun eswen hön lono öfo.&emsp;<em>I think that this train leaves five minutes earlier today.</em></p>
 <p>ü goniso noyo lı vos öni pöklön ke cüdo yünlön müt niün.&emsp;<em>My opinion is that the governor will grant him a pardon.</em></p>
 <p>mötivö vos niün lı cok si sün sınsi, lı nosö.&emsp;<em>Why he has left the city is a mystery.</em></p>
 <p>ü nıwos onö lı totsı hoi vos son titon monodo möi dizel.&emsp;<em>The house stands where three roads meet.</em></p>
